--- a/.github/workflows/inject-mathjax.yml
+++ b/.github/workflows/inject-mathjax.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: リポジトリをチェックアウト
       uses: actions/checkout@v3
+      with:
+        path: repo
 
     - name: Pythonをセットアップ
       uses: actions/setup-python@v4
@@ -19,7 +21,9 @@ jobs:
         python-version: 3.11
 
     - name: MathJaxスクリプト挿入を実行
-      run: python inject_mathjax.py
+      run: |
+        cd repo
+        python inject_mathjax.py
 
     - name: 自動コミット
       uses: stefanzweifel/git-auto-commit-action@v5
