--- a/.github/workflows/inject-mathjax.yml
+++ b/.github/workflows/inject-mathjax.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: 3.11
 
     - name: MathJaxスクリプト挿入を実行
-        python inject_mathjax.py
+      run: python inject_mathjax.py
 
     - name: 自動コミット
       uses: stefanzweifel/git-auto-commit-action@v5
